add: add alert `rules` CRUD endpoints (#194)
Add endpoints for storing the alert rules. They determine which kind of
notifications will be forwarded to which notification channel.

Utilizing the rules is not part of this PR, this will be done in another
one.

## Why

Users should be able for forward notifications according to self defined
rules.

## References

VTI-783
